# tilelang-musa

./: .gitmodules  .mthreads-ci.yml  AGENTS.md  CMakeLists.txt  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  version_provider.py
src/backend/musa/: CMakeLists.txt  tma_types.h
src/backend/musa/codegen/: codegen_musa.cc  codegen_musa.h  intrin_rule_musa.cc  (+4 more)
tilekernels/: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
tilekernels/tests/: conftest.py  pytest_benchmark_plugin.py  pytest_random_plugin.py
tilekernels/tests/engram/: test_engram_fused_weight.py  test_engram_gate_bwd.py  test_engram_gate_fwd.py  test_engram_grad_w_reduce.py  test_engram_hash.py
tilekernels/tests/mhc/: test_expand.py  test_head_compute_mix.py  test_multilayer_recompute.py  test_norm_fn.py  test_post.py  test_pre_apply_mix.py  test_pre_big_fuse.py  test_pre_split_mixes.py  test_sinkhorn.py
tilekernels/tests/moe/: test_aux_fi.py  test_expand_to_fused.py  test_get_fused_mapping.py  test_group_count.py  test_inplace_unique_group_indices.py  test_mask_indices_by_tp.py  test_normalize_weight.py  test_reduce_fused.py  test_top2_sum_gate.py  test_topk_gate.py  test_topk_sum_and_topk_idx.py
tilekernels/tests/quant/: conftest.py  test_cast_back.py  test_cast_back_e5m6.py  test_per_block_cast.py  test_per_block_cast_lossless.py  test_per_channel_cast.py  test_per_channel_cast_and_transpose.py  test_per_channel_cast_fused.py  test_per_token_cast.py  test_per_token_cast_to_e5m6.py  test_swiglu_backward_and_per_token_cast.py  test_swiglu_forward_and_per_channel_cast_and_transpose.py  test_swiglu_forward_and_per_token_cast.py
tilekernels/tests/transpose/: test_transpose.py
tilekernels/tile_kernels/: __init__.py  config.py
tilekernels/tile_kernels/engram/: __init__.py  engram_fused_weight_kernel.py  engram_gate_kernel.py  engram_grad_w_reduce_kernel.py  engram_hash_kernel.py
tilekernels/tile_kernels/mhc/: expand_kernel.py  head_compute_mix_kernel.py  multilayer_recompute_kernel.py  norm_fn_kernel.py  post_kernel.py  pre_apply_mix_kernel.py  pre_big_fuse_kernel.py  pre_split_mixes_kernel.py  sinkhorn_kernel.py
tilekernels/tile_kernels/modeling/: __init__.py
tilekernels/tile_kernels/moe/: __init__.py  aux_fi_kernel.py  common.py  expand_to_fused_kernel.py  get_fused_mapping_kernel.py  group_count_kernel.py  inplace_unique_group_indices_kernel.py  mask_indices_by_tp_kernel.py  normalize_weight_kernel.py  reduce_fused_kernel.py  scoring.py  top2_sum_gate_kernel.py  topk_gate_kernel.py  topk_sum_and_topk_group_idx_kernel.py
tilekernels/tile_kernels/quant/: __init__.py  cast_back_e5m6_kernel.py  cast_back_kernel.py  common.py  per_block_cast_kernel.py  per_block_cast_lossless_kernel.py  per_channel_cast_and_transpose_kernel.py  per_channel_cast_fused_kernel.py  per_channel_cast_kernel.py  per_token_cast_kernel.py  per_token_cast_to_e5m6_kernel.py  swiglu_backward_and_per_token_cast_kernel.py  swiglu_forward_and_per_channel_cast_and_transpose_kernel.py  swiglu_forward_and_per_token_cast_kernel.py  types.py
tilekernels/tile_kernels/testing/: __init__.py  bench.py  generator.py  numeric.py  quant.py
tilekernels/tile_kernels/torch/: __init__.py  cast.py  cast_e5m6.py  engram.py  expand_to_fused.py  mhc.py  moe.py  per_channel_cast_fused.py  reduce_fused.py  swiglu.py  topk.py
tilekernels/tile_kernels/transpose/: __init__.py  batched_transpose_kernel.py
tilekernels/tools/perf/: README.md  dump_topk_sum_source.py  empty_kernel_bench.py  empty_kernel_latency.mu  profile_overhead.py  topk_bench.py
(+912 files in other folders)
